# GRPC-NOTES

./: README.md
rust-examples/cli_grpc_diesel/backend/: Cargo.toml
rust-grpc-authentication-demo/: README.md
rust-grpc-chat/: README.md
rust-grpc-chat-auth/: Cargo.toml  README.md
rust-grpc-chat-auth/certs/: chat_client.csr  chat_client.key  chat_client.pem  chat_server.csr  chat_server.key  chat_server.pem  my_chat_ca.key  my_chat_ca.pem  my_chat_ca.srl
rust-grpc-chat-auth/proto/: chat.proto
rust-grpc-chat-auth/src/: client.rs  server.rs
rust-grpc-chat-cli/: Cargo.toml
rust-grpc-chat/src/: client.rs  hello.rs  server.rs
rust-grpc-cli-demo/: README.md
rust-grpc-stream-bidirectional/: Cargo.toml  README.md
rust-grpc-stream-bidirectional/proto/: chat.proto
rust-grpc-stream-bidirectional/src/: client.rs  server.rs
rust-grpc-stream-request/: Cargo.toml  README.md  build.rs
rust-grpc-stream-request/proto/: chat.proto
rust-grpc-stream-request/src/: client.rs  hello.rs  server.rs
rust-grpc-stream-response/: README.md
rust-grpc-stream-response/proto/: chat.proto
rust-grpc-stream-response/src/: client.rs  server.rs
