[package]
name = "rust-grpc-stream-bidirectional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name ="client"
path = "src/client.rs"

[dependencies]
tonic = {version="0.2",features=["tls"]}
prost = "0.6"
tokio = { version = "0.2", features = ["macros","stream"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.2.0"
